FIX: TK-1485 - Buttons overlapping find out more on widescreens

--- a/_sass/page/home.scss
+++ b/_sass/page/home.scss
@@ -283,3 +283,8 @@
   }
 }
 
+@media( max-height: 650px ) and ( min-width: $screenLarge ) {
+  .hero-buttons {
+    margin-top: 0;
+  }
+}
